--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Sistem Manajemen Bank Sampah untuk pengelolaan data nasabah, jenis sampah, dan transaksi setoran" />
     <meta name="author" content="e-Bank Sampah Jakarta" />
 
-    <meta property="og:title" content="e-Bank Sampah Jakarta" />
+    <meta property="og:title" content="SiBasTaRa" />
     <meta property="og:description" content="Sistem Manajemen Bank Sampah untuk pengelolaan data nasabah, jenis sampah, dan transaksi setoran" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
