--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>e-Bank Sampah Jakarta</title>
+    <title>SiBasTaRa</title>
     <meta name="description" content="Sistem Manajemen Bank Sampah untuk pengelolaan data nasabah, jenis sampah, dan transaksi setoran" />
-    <meta name="author" content="e-Bank Sampah Jakarta" />
+    <meta name="author" content="SiBasTaRa" />
 
     <meta property="og:title" content="SiBasTaRa" />
     <meta property="og:description" content="Sistem Manajemen Bank Sampah untuk pengelolaan data nasabah, jenis sampah, dan transaksi setoran" />
